# georgian-STT-correction

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_pairs.json
data/: ganmarteba_words.txt
examples/: sample_stt.txt  test_lines.txt
geostt_correct/: __init__.py  api.py  api_cli.py  chunking.py  cli.py  config.py  gating.py  heuristics.py  lexicon.py  ollama_backend.py  phonetic_variants.py  pipeline.py  safety.py
notebooks/: colab_gemma_ge_rag_compare.ipynb  colab_gpu_eval.ipynb
scripts/: build_ganmarteba_lexicon.py  evaluate_gemini_stt.py  evaluate_manifest.py
