[project]
name = "geostt-correct"
version = "0.1.0"
description = "Constrained Georgian speech-to-text post-correction (local Ollama)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
geostt-correct = "geostt_correct.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["geostt_correct*"]
